Cleaning up IVAR-post derivation.

--- a/local-defs.tex
+++ b/local-defs.tex
@@ -29,6 +29,7 @@
 \newcommand{\bS}{\mathbf{S}}
 \newcommand{\bK}{\mathbf{K}}
 \newcommand{\ba}{\mathbf{a}}
+\newcommand{\bb}{\mathbf{b}}
 
 % Probability. 
 \newcommand{\E}{\mathbb{E}}
